feat: Enhance ImpactSection with in-view detection and auto-rotation logic
- Added useInView hook to monitor visibility of ImpactSection.
- Implemented auto-rotation of tabs ('nation' and 'day') based on visibility.
- Updated country auto-rotation to only occur when the section is in view.
- Improved scroll logic for country list to prevent jumping.

feat: Refactor TestimonialsSection for improved error handling and logging

- Changed component to accept lang prop for fetching testimonials.
- Added loading and error states with appropriate logging.
- Enhanced fetch logic to handle errors and empty responses gracefully.

fix: Update Ministries component to improve error handling during data fetch

- Added logging for data fetching process and error handling in fetchClubs function.

chore: Update package dependencies

- Added react-pdf package for PDF rendering capabilities.
- Updated package-lock.json to reflect new dependencies and versions.

refactor: Improve logging in CMS service methods

- Enhanced logging for data fetching methods to provide better insights into the process.
- Simplified error handling and logging for getWeeklyWords and getNewsletters methods.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "react-pdf": "^10.3.0",
     "supabase": "^2.72.6",
     "tailwind-merge": "^3.4.0"
   },
